--- a/app/src/main/res/layout/activity_resultado_busca.xml
+++ b/app/src/main/res/layout/activity_resultado_busca.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".SearchResultsActivity">
+    tools:context=".ResultadoBuscaActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,8 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_search_results" />
-
-
+    <include layout="@layout/content_resultado_busca" />
 
 </android.support.design.widget.CoordinatorLayout>
