--- a/app/src/main/res/layout/content_primeira.xml
+++ b/app/src/main/res/layout/content_primeira.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +8,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".MainActivity"
+    tools:showIn="@layout/activity_primeira">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,7 +18,7 @@
         android:text="@string/chamada_busca"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="96dp"
         android:textSize="36sp"
         android:textStyle="bold"
         android:textAlignment="center"
@@ -24,24 +27,27 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/term"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
+        android:id="@+id/txtTerm"
         android:textAlignment="center"
         android:background="#AAAAAA"
         android:allowUndo="true"
         android:inputType="text|textAutoComplete"
         android:lines="1"
         android:maxLines="1"
-        android:minLines="1" />
+        android:minLines="1"
+        android:layout_below="@+id/txtChamadaBusca"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="48dp"
+        android:height="96dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/botao_busca"
         android:id="@+id/button"
-        android:layout_below="@+id/term"
+        android:layout_below="@+id/txtTerm"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="48dp"
         android:onClick="search"/>
 </RelativeLayout>
