--- a/app/src/main/res/layout/content_resultado_busca.xml
+++ b/app/src/main/res/layout/content_resultado_busca.xml
@@ -9,13 +9,21 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".SearchResultsActivity"
-    tools:showIn="@layout/activity_search_results">
+    tools:context=".ResultadoBuscaActivity"
+    tools:showIn="@layout/activity_resultado_busca">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/txtFraseBusca" />
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
+        android:layout_below="@id/txtFraseBusca"
+        android:layout_marginTop="24dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
