--- a/app/src/main/res/layout/content_search_result.xml
+++ b/app/src/main/res/layout/content_search_result.xml
@@ -9,8 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ResultadoBuscaActivity"
-    tools:showIn="@layout/activity_resultado_busca">
+    tools:context=".SearchResultActivity"
+    tools:showIn="@layout/activity_search_result">
 
     <TextView
         android:layout_width="wrap_content"
