--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,7 +18,7 @@
         android:text="@string/chamada_busca"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="72dp"
         android:textSize="36sp"
         android:textStyle="bold"
         android:textAlignment="center"
@@ -50,5 +50,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="48dp"
         android:onClick="search"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
