--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -54,9 +54,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView"
+        android:text="--hash"
+        android:id="@+id/txtHash"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="--token"
+        android:id="@+id/txtToken"
+        android:layout_below="@+id/txtHash"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
