--- a/app/src/main/res/layout/content_movie.xml
+++ b/app/src/main/res/layout/content_movie.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,35 +10,35 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MovieActivity"
-    tools:showIn="@layout/activity_filme">
+    tools:showIn="@layout/activity_movie">
 
     <ImageView
+        android:id="@+id/imgPoster"
         android:layout_width="150dp"
         android:layout_height="222dp"
-        android:id="@+id/imgPoster"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/poster"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:src="@drawable/poster" />
 
     <TextView
+        android:id="@+id/txtMovieTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/titulo_filme"
-        android:id="@+id/txtMovieTitle"
-        android:textSize="24dp"
         android:layout_below="@id/imgPoster"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp" />
+        android:layout_marginTop="24dp"
+        android:text="@string/titulo_filme"
+        android:textSize="24dp" />
 
     <Button
+        android:id="@+id/btnAddRemove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/botao_adiciona_remove"
         android:layout_below="@id/txtMovieTitle"
-        android:id="@+id/btnAddRemove"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:onClick="adicionaOuRemove"/>
+        android:onClick="addOrRemove"
+        android:text="@string/botao_adiciona_remove"/>
 
 </RelativeLayout>
