--- a/app/src/main/res/layout/content_movie.xml
+++ b/app/src/main/res/layout/content_movie.xml
@@ -19,7 +19,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:src="@drawable/poster" />
+        android:src="@drawable/img" />
 
     <TextView
         android:id="@+id/txtMovieTitle"
