--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:theme="@style/AppTheme" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -27,7 +28,8 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <include layout="@layout/content_main" />
+        <include layout="@layout/content_main"
+            android:id="@+id/layout_main" />
 
     </ScrollView>
 
