--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,9 +29,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/txtTerm"
         android:textAlignment="center"
-        android:background="#AAAAAA"
+        android:background="#CCCCCC"
         android:allowUndo="true"
-        android:inputType="text|textAutoComplete"
+        android:inputType="text"
         android:lines="1"
         android:maxLines="1"
         android:minLines="1"
@@ -39,7 +39,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="48dp"
-        android:height="96dp" />
+        android:height="96dp"
+        android:singleLine="true"
+        android:textStyle="normal" />
 
     <Button
         android:layout_width="wrap_content"
