--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -60,6 +60,6 @@
         android:id="@+id/txtHash"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:visibility="invisible" />
+        android:visibility="visible" />
 
 </RelativeLayout>
