--- a/app/src/main/res/layout/content_search_result.xml
+++ b/app/src/main/res/layout/content_search_result.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,6 +12,16 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".SearchResultActivity"
     tools:showIn="@layout/activity_search_result">
+    -->
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".SearchResultActivity">
 
     <TextView
         android:layout_width="wrap_content"
