--- a/app/src/main/res/layout/fragment_mylistt.xml
+++ b/app/src/main/res/layout/fragment_mylistt.xml
@@ -7,12 +7,12 @@
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/textView"
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="MyListt"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:id="@+id/listViewMyListt"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="24dp" />
 
 </RelativeLayout>
