--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -16,7 +16,7 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
+        android:id="@+id/listViewResultadoBusca"
         android:layout_below="@id/txtFraseBusca"
         android:layout_marginTop="24dp"
         android:layout_alignParentTop="true"
