simple row adjusts

--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -27,7 +27,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <include layout="@layout/content_movie" />
+        <include layout="@layout/fragment_movie" />
 
     </ScrollView>
 
