--- a/app/src/main/res/layout/simple_row.xml
+++ b/app/src/main/res/layout/simple_row.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,38 +8,57 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:id="@+id/rowTextView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingRight="0dp">
-    </TextView>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="80dp">
 
-    <TextView
-        android:id="@+id/rowTextView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:paddingLeft="0dp"
-        android:paddingTop="10dp"
-        android:paddingRight="0dp"
-        android:paddingBottom="10dp">
-    </TextView>
+        <ImageView
+            android:layout_width="53dp"
+            android:layout_height="80dp"
+            android:id="@+id/imgFilmePoster"
+            android:src="@drawable/img" />
 
-    <TextView
-        android:id="@+id/rowTextView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:paddingLeft="0dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp">
-    </TextView>
+        <TextView
+            android:id="@+id/rowTextView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="asdasdasd"
+            android:textStyle="normal"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingRight="0dp"
+            android:layout_gravity="center_vertical">
+        </TextView>
+
+        <TextView
+            android:id="@+id/rowTextView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="qweqweqwe"
+            android:textStyle="bold"
+            android:paddingLeft="0dp"
+            android:paddingTop="10dp"
+            android:paddingRight="0dp"
+            android:paddingBottom="10dp"
+            android:layout_gravity="center_vertical">
+        </TextView>
+
+        <TextView
+            android:id="@+id/rowTextView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="zxczxczxc"
+            android:paddingLeft="0dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
+            android:layout_gravity="center_vertical">
+        </TextView>
     </LinearLayout>
+
+</LinearLayout>
