--- a/app/src/main/res/layout/fragment_mylistt.xml
+++ b/app/src/main/res/layout/fragment_mylistt.xml
@@ -13,4 +13,12 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="24dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/txtMsg"
+        android:layout_alignTop="@+id/listViewMyListt"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
