backing to activity way and fixes

--- a/app/src/main/res/layout/activity_filme2.xml
+++ b/app/src/main/res/layout/activity_filme2.xml
@@ -4,11 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#111111"
     tools:context=".Filme2Activity">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+    <include layout="@layout/tool_bar"/>
 
     <ImageView
         android:id="@+id/imgPoster"
@@ -24,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="24dp"
+        android:textColor="#FFFFFF"
         android:text="@string/titulo_filme"
         android:textSize="24sp" />
 
@@ -34,7 +34,10 @@
         android:layout_below="@id/txtMovieTitle"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="24dp"
+        android:padding="8dp"
         android:onClick="adicionarOuRetirar"
+        android:background="#f35100"
+        android:textColor="#000000"
         android:text="@string/botao_adiciona_remove"/>
 
 </LinearLayout>
