--- a/app/src/main/res/layout/activity_main_bkp.xml
+++ b/app/src/main/res/layout/activity_main_bkp.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar">
+        layout="@layout/tool_bar">
     </include>
 
     <android.support.design.widget.TabLayout
