--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#111111"
+    android:weightSum="1"
     tools:context=".MainActivity">
 
     <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+        layout="@layout/tool_bar"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -17,15 +18,21 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="180dp" />
+        android:layout_marginTop="180dp"
+        android:background="#999999"
+        android:layout_weight="0.07" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:text="Search a Movie"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
         android:id="@+id/btnSearchAMovie"
         android:layout_gravity="center_horizontal"
-        android:onClick="busca" />
+        android:onClick="busca"
+        android:padding="8dp"
+        android:layout_marginTop="8dp"
+        android:background="#f35100"
+        android:textColor="#000000" />
 </LinearLayout>
