--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,20 +1,20 @@
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
-<!--
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_mylistt"
+        android:icon="@drawable/ic_close_search"
+        android:title="@string/mylistt"
         android:orderInCategory="100"
-        android:title="string_action_settings"
-        app:showAsAction="never" />
--->
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_search"
-        android:title="string_search"
+        android:icon="@drawable/common_ic_googleplayservices"
+        android:title="@string/mylistt"
         android:orderInCategory="200"
-        android:icon="@drawable/ic_open_search"
         app:showAsAction="ifRoom" />
 
 </menu>
