--- a/app/src/main/res/layout/activity_filme.xml
+++ b/app/src/main/res/layout/activity_filme.xml
@@ -5,16 +5,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#111111"
-    tools:context=".FilmeActivity">
+    tools:context=".Activities.FilmeActivity">
 
     <include layout="@layout/tool_bar"/>
 
     <ImageView
         android:id="@+id/imgPoster"
-        android:layout_width="150dp"
-        android:layout_height="222dp"
+        android:layout_width="180dp"
+        android:layout_height="266dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="40dp"
         android:src="@drawable/img" />
 
     <TextView
@@ -22,19 +22,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="30dp"
         android:textColor="#FFFFFF"
         android:text="@string/titulo_filme"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/btnAddRemove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txtMovieTitle"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="24dp"
-        android:padding="8dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:onClick="adicionarOuRetirar"
         android:background="#f35100"
         android:textColor="#000000"
