--- a/app/src/main/res/layout/activity_my_listt.xml
+++ b/app/src/main/res/layout/activity_my_listt.xml
@@ -5,10 +5,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#111111"
-    tools:context=".MyListtActivity">
+    tools:context=".Activities.MyListtActivity">
 
     <include
         layout="@layout/tool_bar"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/mylistt"
+        android:gravity="start"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/laranja"
+        android:id="@+id/txtTituloMyListt"
+        android:layout_gravity="center"
+        android:textAlignment="textStart" />
 
     <ListView
         android:layout_width="wrap_content"
@@ -34,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:textColor="@color/colorTextTitle"
+        android:textColor="@color/laranja"
         android:id="@+id/btnVaiParaBusca"
         android:layout_gravity="center"
         android:onClick="vaiParaBusca"
