--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="4dp"
     android:background="#222222"
-    android:id="@+id/toolbarra">
+    android:id="@+id/toolbarra"
+    app:titleTextAppearance="@style/Toolbar.TitleText" >
 
-    <ImageView
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:text="MyListt"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtItemMenuMyListt"
         android:layout_gravity="right"
-        android:src="@drawable/ic_mylistt"
-        android:id="@+id/imgMyListtIcon"
+        android:text="MyListt"
+        android:textSize="15sp"
+        android:textColor="@color/laranja"
         android:layout_marginRight="16dp"
         android:onClick="vaiParaMyListt" />
-
 </android.support.v7.widget.Toolbar>
