--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,9 @@
         android:layout_gravity="center_horizontal"
         android:text="@string/chamada"
         android:layout_marginTop="80dp"
-        android:textColor="#f35100"
+        android:textColor="@color/cinze"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textAlignment="viewStart"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
         android:layout_marginBottom="10dp" />
@@ -34,7 +33,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:background="#999999"
+        android:background="#CCCCCC"
         android:layout_weight="0.05"
         android:singleLine="true"
         android:textAlignment="center"
