--- a/app/src/main/res/layout/simple_row.xml
+++ b/app/src/main/res/layout/simple_row.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:text="asdasdasd"
+            android:text=""
             android:textStyle="normal"
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:text="qweqweqwe"
+            android:text=""
             android:textStyle="bold"
             android:paddingLeft="0dp"
             android:paddingTop="10dp"
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:text="zxczxczxc"
+            android:text=""
             android:paddingLeft="0dp"
             android:paddingTop="10dp"
             android:paddingRight="10dp"
