--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/txtTituloToolbar"
         android:layout_gravity="center_horizontal"
-        android:text="WatchListt"
+        android:text="@string/app_name"
         android:textStyle="bold"
         android:textSize="18sp"
         android:textColor="@color/cinze"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/txtItemMenuMyListt"
         android:layout_gravity="right"
-        android:text="MyListt"
+        android:text="@string/mylistt"
         android:textSize="15sp"
         android:textColor="@color/laranja"
         android:layout_marginRight="16dp"
