--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/chamada"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:textColor="@color/cinze"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -26,7 +26,7 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="24dp"
         android:id="@+id/edtSearchAMovie"
         android:layout_gravity="center_horizontal"
         android:layout_marginRight="16dp"
