--- a/app/src/main/res/layout/activity_filme.xml
+++ b/app/src/main/res/layout/activity_filme.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical" android:background="#111111"
-    tools:context="com.leonardoserra.watchlist.Activities.MyListtActivity">
+    android:background="@color/preto"
+    android:orientation="vertical"
+    tools:context=".Activities.FilmeActivity">
+
+    <include layout="@layout/tool_bar"/>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#222222">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30dp"
-                android:textColor="@color/cinzaClaro"
+                android:textColor="#FFFFFF"
                 android:text="@string/titulo_filme"
                 android:textSize="18sp" />
 
