--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    android:orientation="vertical"
+    android:background="@color/preto"
+    android:weightSum="1"
+    tools:context=".Activities.MainActivity">
 
     <include
-        layout="@layout/app_bar_main"
+        layout="@layout/tool_bar"/>
+
+    <TextView
+        android:layout_width="217dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/chamada"
+        android:layout_marginTop="100dp"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginBottom="10dp" />
+
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="24dp"
+        android:id="@+id/edtSearchAMovie"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:background="#CCCCCC"
+        android:layout_weight="0.05"
+        android:singleLine="true"
+        android:textAlignment="center"
+        android:textStyle="normal"
+        android:scrollIndicators="none"
+        android:lines="1"
+        android:inputType="text"
+        android:gravity="center_horizontal"
+        android:enabled="true"
+        android:allowUndo="true" />
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
-
-</android.support.v4.widget.DrawerLayout>
+    <Button
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:text="@string/search_a_movie"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:id="@+id/btnSearchAMovie"
+        android:layout_gravity="center_horizontal"
+        android:onClick="busca"
+        android:padding="4dp"
+        android:layout_marginTop="8dp"
+        android:background="#f35100"
+        android:textColor="#000000" />
+</LinearLayout>
