--- a/app/src/main/res/layout/activity_my_listt.xml
+++ b/app/src/main/res/layout/activity_my_listt.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical" android:background="#111111"
-    tools:context="com.leonardoserra.watchlist.Activities.MyListtActivity">
+    android:orientation="vertical"
+    android:background="@color/preto"
+    tools:context=".Activities.MyWatchListt">
 
+    <include
+        layout="@layout/tool_bar"/>
+<!--
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/mylistt"
+        android:gravity="start"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/laranja"
+        android:id="@+id/txtTituloMyListt"
+        android:layout_gravity="center"
+        android:textAlignment="textStart" />
+-->
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
