--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,13 @@
 <resources>
     <style name="Dark.Overlay" parent="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:background">@color/cinzaEscuro</item>
+        <!--<item name="android:background">@color/cinzaEscuro6</item>-->
         <item name="android:label">@color/laranja</item>
         <item name="android:textColor">@color/azul</item>
+        <item name="android:colorPrimaryDark">@color/laranja_escuro</item>
     </style>
 
     <style name="Dark.Overlay.LightPopup" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:background">@color/cinzaEscuro</item>
+        <!--<item name="android:background">@color/cinzaEscuro6</item>-->
         <item name="android:label">@color/verde</item>
         <item name="android:textColor">@color/rosa</item>
     </style>
