--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,38 +12,49 @@
         layout="@layout/tool_bar"/>
 
     <TextView
-        android:layout_width="217dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Search"
+        android:id="@+id/textView"
+        android:layout_marginTop="16dp"
         android:layout_gravity="center_horizontal"
-        android:text="@string/chamada"
-        android:layout_marginTop="100dp"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:layout_marginBottom="10dp" />
+        android:textColor="@color/laranja"
+        android:textStyle="bold" />
+
+    <!--<TextView-->
+        <!--android:layout_width="210dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:text="@string/chamada"-->
+        <!--android:layout_marginTop="120dp"-->
+        <!--android:textColor="#FFFFFF"-->
+        <!--android:textSize="24sp"-->
+        <!--android:textStyle="bold"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:textAlignment="center"-->
+        <!--android:enabled="false" />-->
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="24dp"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:id="@+id/edtSearchAMovie"
         android:layout_gravity="center_horizontal"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="150dp"
         android:background="#CCCCCC"
-        android:layout_weight="0.05"
         android:singleLine="true"
         android:textAlignment="center"
         android:textStyle="normal"
         android:scrollIndicators="none"
         android:lines="1"
         android:inputType="text"
-        android:gravity="center_horizontal"
+        android:gravity="center_vertical|center_horizontal"
         android:enabled="true"
-        android:allowUndo="true" />
+        android:allowUndo="true"
+        android:hint="@string/chamada" />
 
     <Button
         android:layout_width="180dp"
