--- a/app/src/main/res/layout/activity_resultado_busca.xml
+++ b/app/src/main/res/layout/activity_resultado_busca.xml
@@ -8,7 +8,19 @@
     android:weightSum="1"
     tools:context=".Activities.ResultadoBuscaActivity">
 
-    <include layout="@layout/tool_bar"/>
+    <include
+        layout="@layout/tool_bar"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Search result"
+        android:id="@+id/textView"
+        android:layout_marginTop="16dp"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/laranja"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
