--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,17 +16,18 @@
         android:layout_weight="0.5" />
 
     <TextView
-        android:layout_width="320dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/chamada"
-        android:id="@+id/textView"
+        android:id="@+id/chamada"
         android:textColor="@color/laranja"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:layout_gravity="center_horizontal|bottom"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:textSize="32sp" />
 
     <Space
@@ -57,7 +58,7 @@
     <Space
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.1" />
+        android:layout_weight="0.05" />
 
     <Button
         android:layout_width="match_parent"
@@ -76,5 +77,5 @@
     <Space
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.2" />
+        android:layout_weight="0.25" />
 </LinearLayout>
