--- a/app/src/main/res/layout/activity_resultado_busca.xml
+++ b/app/src/main/res/layout/activity_resultado_busca.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Search result"
-        android:id="@+id/textView"
+        android:id="@+id/chamada"
         android:layout_marginTop="16dp"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/laranja"
